--- a/index.html
+++ b/index.html
@@ -1,40 +1,74 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Voice AI Chat</title>
-</head>
-<body>
-  <h1>Talk to the AI</h1>
-  <button onclick="startRecording()">🎙️ Speak</button>
-  <audio id="responseAudio" controls></audio>
+<script>
+let mediaRecorder;
+let audioChunks = [];
+let silenceTimer;
+let audioContext;
+let analyser;
+let source;
 
-  <script>
-    let mediaRecorder;
-    let audioChunks = [];
+async function startRecording() {
+  const stream = await navigator.mediaDevices.getUserMedia({ audio: true });
+  audioChunks = [];
 
-    async function startRecording() {
-      const stream = await navigator.mediaDevices.getUserMedia({ audio: true });
-      mediaRecorder = new MediaRecorder(stream);
-      mediaRecorder.ondataavailable = e => audioChunks.push(e.data);
-      mediaRecorder.onstop = async () => {
-        const audioBlob = new Blob(audioChunks, { type: 'audio/webm' });
-        const formData = new FormData();
-        formData.append("audio", audioBlob, "recording.webm");
+  mediaRecorder = new MediaRecorder(stream);
+  mediaRecorder.ondataavailable = (e) => audioChunks.push(e.data);
 
-        const response = await fetch("/transcribe", {
-          method: "POST",
-          body: formData
-        });
+  mediaRecorder.onstop = async () => {
+    const audioBlob = new Blob(audioChunks, { type: 'audio/webm' });
+    const formData = new FormData();
+    formData.append("audio", audioBlob, "recording.webm");
 
-        const audio = document.getElementById("responseAudio");
-        const audioBlobResp = await response.blob();
-        audio.src = URL.createObjectURL(audioBlobResp);
-        audio.play();
-        audioChunks = [];
-      };
-      mediaRecorder.start();
-      setTimeout(() => mediaRecorder.stop(), 5000); // record for 5 seconds
+    const response = await fetch("/transcribe", {
+      method: "POST",
+      body: formData,
+    });
+
+    const audio = document.getElementById("responseAudio");
+    const audioBlobResp = await response.blob();
+    audio.src = URL.createObjectURL(audioBlobResp);
+    audio.play();
+  };
+
+  mediaRecorder.start();
+  monitorSilence(stream);
+}
+
+function monitorSilence(stream) {
+  audioContext = new (window.AudioContext || window.webkitAudioContext)();
+  source = audioContext.createMediaStreamSource(stream);
+  analyser = audioContext.createAnalyser();
+  source.connect(analyser);
+  const data = new Uint8Array(analyser.fftSize);
+
+  const checkSilence = () => {
+    analyser.getByteTimeDomainData(data);
+    let max = 0;
+    for (let i = 0; i < data.length; i++) {
+      const deviation = Math.abs(data[i] - 128);
+      if (deviation > max) max = deviation;
     }
-  </script>
-</body>
-</html>
+
+    if (max < 10) {
+      if (!silenceTimer) {
+        silenceTimer = setTimeout(() => {
+          stopRecording();
+        }, 1000); // 1 second of silence = stop
+      }
+    } else {
+      clearTimeout(silenceTimer);
+      silenceTimer = null;
+    }
+
+    requestAnimationFrame(checkSilence);
+  };
+
+  checkSilence();
+}
+
+function stopRecording() {
+  if (mediaRecorder && mediaRecorder.state !== "inactive") {
+    mediaRecorder.stop();
+    if (audioContext) audioContext.close();
+  }
+}
+</script>
