--- a/index.html
+++ b/index.html
@@ -14,20 +14,26 @@ async function startRecording() {
   mediaRecorder.ondataavailable = (e) => audioChunks.push(e.data);
 
   mediaRecorder.onstop = async () => {
-    const audioBlob = new Blob(audioChunks, { type: 'audio/webm' });
-    const formData = new FormData();
-    formData.append("audio", audioBlob, "recording.webm");
+  const audioBlob = new Blob(audioChunks, { type: 'audio/webm' });
+  const formData = new FormData();
+  formData.append("audio", audioBlob, "recording.webm");
 
-    const response = await fetch("/transcribe", {
-      method: "POST",
-      body: formData,
-    });
+  const response = await fetch("/transcribe", {
+    method: "POST",
+    body: formData,
+  });
 
-    const audio = document.getElementById("responseAudio");
-    const audioBlobResp = await response.blob();
-    audio.src = URL.createObjectURL(audioBlobResp);
-    audio.play();
+  const audio = document.getElementById("responseAudio");
+  const audioBlobResp = await response.blob();
+  audio.src = URL.createObjectURL(audioBlobResp);
+
+  audio.onended = () => {
+    startRecording(); // 🔁 automatically listen again
   };
+
+  audio.play();
+};
+
 
   mediaRecorder.start();
   monitorSilence(stream);
