--- a/index.html
+++ b/index.html
@@ -116,5 +116,9 @@
       silenceTimer = null;
     }
   </script>
+<script>
+  console.log("✅ index.html loaded and script is running");
+</script>
+
 </body>
 </html>
